[package]
name = "avbtool-rs"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["miner7222"]
description = "Pure Rust AVB tooling extracted from DynoBox"

[dependencies]
anyhow = "1.0.95"
blake2 = "0.10.6"
byteorder = "1.5.0"
clap = { version = "4.5.28", features = ["derive"] }
crc32fast = "1.4.2"
getrandom = "0.3.4"
lazy_static = "1.5.0"
num-bigint-dig = "0.8.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rsa = "0.9.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha1 = "0.10.6"
sha2 = "0.11.0"
thiserror = "2.0.11"
tracing = "0.1.41"

[dev-dependencies]
tempfile = "3.16.0"
